fix: overflow issues when elements increase.

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,22 @@
   text-align: center;
   background-color: black;
   color: #f6f6f6;
+  min-height: 100vh;
+}
+
+.module-container {
+  width: 70%;
+  padding: 15px;
+}
+
+@media (max-width: 1199.98px) {
+  .module-container {
+    width: 80%;
+  }
+}
+
+@media (max-width: 768px) {
+  .module-container {
+    width: 100%;
+  }
 }
